# Reports

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  github_projects.py  main.py  milestones.py  report_pdf.py  scheduler.py  schemas.py  web.py
app/assets/: report_form.css  report_form_components.css  report_landing.css  report_pdf.css
app/integrations/: github.py  teams.py
app/routes/: health.py  reports.py  rsd.py  teams.py
app/views/: forms_landing.html  report_form.html  report_pdf.html  reports_download.html
migrations/: 0001_init.sql  0002_backfill_team_name.sql  0003_update_weekly.sql
scripts/: clean_db.py  find_project_id.py  seed_realistic_data.py
