[project]
name = "global-drones-reports"
version = "0.1.0"
description = "Sistema automatizado para geração de relatórios semanais de desenvolvimento em PDF"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.30.6",
    "jinja2==3.1.4",
    "python-multipart==0.0.12",
    "pydantic-settings==2.5.2",
    "weasyprint==62.3",
    "pydyf==0.10.0",
    "requests==2.32.3",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"
